# hevy-fti-predictor

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.serve  README.md  cloudbuild.yaml  example.env  main.py  mise.toml  pyproject.toml
.dvc/: config
.github/workflows/: deploy.yml  train.yml  update-data.yml
data/: processed.dvc  raw.dvc
docs/: api.md  gcs.md  hevy_api.md  inference.md
scripts/: deploy.sh  fetch_workouts.py  set-permissions.sh  setup-gcp.sh  train.py
src/: exercise_mapping.py  feature_engineering.py  hevy_client.py
src/feature_pipeline/: exercise_mapping.py  fetch.py  hevy_client.py
src/inference_pipeline/: api.py  cli.py  feature_provider.py  feature_store.py  inference.py
src/training_pipeline/: train.py
