[project]
name = "hevy-fti-predictor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[tool.basedpyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportExplicitAny = "none"
reportAny = "none"
reportMissingTypeArgument = "warning"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "pandas-stubs>=3.0.0.260204",
]
