[project]
name = "hevy-fti-predictor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dagshub>=0.7.0",
    "joblib>=1.4.0",
    "mlflow>=2.16.0",
    "pandas>=2.2,<3",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
]

[tool.basedpyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportExplicitAny = "none"
reportAny = "none"
reportMissingTypeArgument = "warning"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "pandas-stubs>=2.2.0",
]
